# cloud.jsangho.all

./: .cursorrules  .dockerignore  .env.example  .gitignore  .gitmodules  .markdownlint.yaml  .mcp.json  .pre-commit-config.yaml  .prettierrc  CLAUDE.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy-backend.yml
.obsidian/: app.json  appearance.json  graph.color-groups.backup.json  graph.json  workspace.json
.obsidian/plugins/OA-file-hider/: data.json
a2a-mcp/: README.md
fastapi/: .gitignore  .importlinter  CLAUDE.md  Dockerfile  auth_main.py  main.py  pyproject.toml  requirements.txt  run_exaone.py
fastapi/_docs/: docker-rules.md  pyproject-toml.md
fastapi/alembic/: env.py
fastapi/alembic/versions/: 20260701_02_add_received_emails_table.py  20260701_03_add_to_email_message_id_to_received.py  20260702_01_add_spam_label_to_received.py  20260702_02_create_receiver_emails_table.py  20260702_03_switch_receiver_embedding_to_bge_m3.py  20260702_04_dedupe_and_unique_receiver_message_id.py  20260713_01_make_ple_events_month_nullable.py  20260713_02_create_soccer_stadium_team_schedule_player.py  20260714_01_add_embedding_to_soccer_tables.py  20260714_01_create_wrestlers_table.py  20260714_02_change_soccer_embedding_dim_to_1024.py  20260714_02_drop_wrestlers_timestamps.py  20260714_03_add_embedding_to_soccer_tables.py  20260714_03_create_wrestlers_table.py  20260714_04_drop_wrestlers_timestamps.py  20260714_04_widen_wrestlers_varchar_columns.py  20260714_05_widen_wrestlers_varchar_columns.py  20260714_06_widen_wrestlers_height_weight.py  20260714_07_replace_wrestlers_csv_columns.py  20260720_01_add_oauth_columns_to_users.py
fastapi/apps/kayfabe/: wwe_active_roster.csv
fastapi/core/entities/: user_model.py
fastapi/core/lol/: t1_mid_faker_orchestrator.py
flutter/: README.md  analysis_options.yaml  pubspec.yaml
flutter/lib/: main.dart
flutter/test/: widget_test.dart
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt
scripts/: generate_jwt_keys.sh  validate_harness.py
www/: .gitignore  CLAUDE.md  eslint.config.mjs  next.config.mjs  pnpm-lock.yaml
www/_docs/: darkmode-spec.md
www/app/: globals.css  layout.tsx  page.tsx
www/components/: contacts-csv-upload.tsx  dataset-collection-pipeline.tsx  face-object-detection.tsx  gemini-chat-panel.tsx  google-session-provider.tsx  kayfabe-logo.tsx  lesson-titanic-overview.tsx  navbar.tsx  ple-ai-scoreboard.tsx  ple-event-grid.tsx  ple-picker-dialog.tsx  smith-captain-chat.tsx  soccer-chat.tsx  titanic-csv-upload.tsx  titanic-vision-upload.tsx  weather-widget.tsx  wrestler-chat-panel.tsx  wwe-ticker.tsx
www/context/: auth-context.tsx
www/lib/: api.ts  auth-api.ts  betting-odds.ts  next-auth-options.ts  oauth-popup.ts  ple-api.ts  records-api.ts  require-admin.ts  title-history-api.ts  wrestler-info.ts  wwe-current-champions.ts  wwe-ple-detail.ts  wwe-ple-matches.ts  wwe-ple.ts
(+459 files in other folders)
