[project]
name = "cloud-jsangho-fastapi"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "torch==2.12.0+cu126",
    "torchvision==0.27.0+cu126",
    "torchaudio==2.11.0+cu126",
    "fastapi==0.136.1",
    "uvicorn[standard]==0.47.0",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
    "sqlalchemy[asyncio]==2.0.49",
    "psycopg[binary]==3.3.4",
    "pgvector==0.4.2",
    "sqlmodel==0.0.38",
    "alembic==1.18.4",
    "neo4j==6.2.0",
    "google-genai==2.11.0",
    "google-generativeai==0.8.6",
    "transformers==5.13.0",
    "mcp==1.28.1",
    "ollama==0.6.2",
    "kiwipiepy==0.23.1",
    "opencv-python-headless==5.0.0.93",
    "ultralytics==8.4.89",
    "pillow==12.3.0",
    "numpy==2.5.1",
    "pandas==3.0.3",
    "scikit-learn==1.8.0",
    "lightgbm==4.7.0",
    "xgboost==3.3.0",
    "matplotlib==3.11.0",
    "seaborn==0.13.2",
    "boto3==1.43.40",
    "python-dotenv==1.2.2",
    "redis==8.0.1",
    "beautifulsoup4==4.15.0",
    "pyjwt==2.10.1",
]

[project.optional-dependencies]
llm = [
    "huggingface_hub==1.23.0",
    "peft==0.19.1",
    "bitsandbytes==0.49.2",
    "accelerate==1.14.0",
    "datasets==5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "import-linter==2.12",
    "ruff==0.15.21",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".git",
    "__pycache__",
    "alembic/",
    "pytorch_env/",
    ".venv/",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line-length — ruff format handles this
    "B008",  # FastAPI Depends() in default args
    "N999",  # module name with hyphens (앱 디렉터리명)
    "N815",  # Pydantic 스키마 camelCase 필드 (API 응답 컨벤션)
    "N803",  # ML 관례 대문자 파라미터 (X, y) 및 API 파라미터
    "N806",  # 테스트 Mock 변수 명명 관례
]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]           # sys.path.insert 이후 import 구조적 필요
"**/scripts/*.py" = ["E402"]   # standalone 스크립트 sys.path 조작
"**/apps/ontology/tests/*.py" = ["E402"]  # standalone 검증 스크립트 sys.path 조작

[tool.ruff.lint.isort]
known-first-party = [
    "jsangho",
    "ontology",
    "titanic",
    "kayfabe",
    "superstar",
    "human_resource",
    "imitation_game",
    "inception",
    "social_network",
    "manager",
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = [
    "alembic/",
    "pytorch_env/",
    "__pycache__/",
]
